# ros4k

./: CMakeLists.txt  Dockerfile.arm  Dockerfile.x86  README.md  docker-compose.multi.yaml  docker-compose.single.yaml  package.xml
include/parco/: analysis.hpp  path.hpp
include/shc/: object_creator.hpp
include/shc/benchmark/: benchmark.hpp
include/shc/kairos/: sc_zed.hpp
include/shc/shared_memory/: interface.hpp  posix.hpp
include/shc/shared_memory_allocator/: allocator.hpp  interface.hpp
include/shc/test/: iceoryx_pub.hpp  iceoryx_sub.hpp  sc_tcp_pub.hpp  sc_tcp_sub.hpp  sc_udp_pub.hpp  sc_udp_sub.hpp  shc_pub.hpp  shc_sub.hpp  test.hpp  zc_pub.hpp  zc_sub.hpp
kairos/: profiler.py
kairos/ArucoPoseEstimation/: README.md  aruco_pose_estimation.csv  main.py
kairos/ObjectDetection/: Dockerfile  main.py  object_detection.csv
msg/: Data.msg  Header.msg  Token.msg
results/jetson/docker_multi/sc_tcp_inter1p1s_0_1024/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p1s_0_1048576/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p1s_0_128/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p1s_0_131072/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p1s_0_16/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p1s_0_16384/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p1s_0_262144/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p1s_0_32/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p1s_0_32768/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p1s_0_4096/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p1s_0_524288/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p1s_0_65536/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p2s_0_16/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p2s_0_524288/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p2s_0_65536/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p2s_1_16/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p2s_1_524288/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p2s_1_65536/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p3s_0_16/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p3s_0_524288/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p3s_0_65536/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p3s_1_16/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p3s_1_524288/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p3s_1_65536/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p3s_2_16/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p3s_2_524288/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p3s_2_65536/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p4s_0_16/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p4s_0_524288/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p4s_0_65536/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p4s_1_16/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p4s_1_524288/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p4s_1_65536/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p4s_2_16/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p4s_2_524288/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p4s_2_65536/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p4s_3_16/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p4s_3_524288/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p4s_3_65536/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p5s_0_16/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p5s_0_524288/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p5s_0_65536/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p5s_1_16/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p5s_1_524288/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p5s_1_65536/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p5s_2_16/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p5s_2_524288/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p5s_2_65536/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p5s_3_16/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p5s_3_524288/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p5s_3_65536/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p5s_4_16/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p5s_4_524288/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter1p5s_4_65536/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter2p1s_0_16/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter2p1s_0_524288/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter2p1s_0_65536/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter3p1s_0_16/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter3p1s_0_524288/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter3p1s_0_65536/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter4p1s_0_16/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter4p1s_0_524288/: analysis.csv
results/jetson/docker_multi/sc_tcp_inter4p1s_0_65536/: analysis.csv
results/jetson/docker_single/: nohup.out
script/: 1p1s_analysis.bash  1pNs_analysis.bash  Np1s_analysis.bash  docker_overhead.py  inter1p1s.bash  inter1pNs.bash  interNp1s.bash  intra1p1s.bash  intra1pNs.bash  intraNp1s.bash  plot.bash  plots.py
script/docker_multi/: 1p1s.bash  NpNs.bash  inter1p1s.bash  inter1pNs.bash  interNp1s.bash
script/docker_single/: 1p1s.bash  NpNs.bash  inter1p1s.bash  inter1pNs.bash  interNp1s.bash  intra1p1s.bash  intra1pNs.bash  intraNp1s.bash
src/benchmark/inter/: iceoryx_pub.cpp  iceoryx_sub.cpp  sc_tcp_pub.cpp  sc_tcp_sub.cpp  sc_udp_pub.cpp  sc_udp_sub.cpp  shc_pub.cpp  shc_sub.cpp
src/benchmark/intra/: multit_iceoryx.cpp  multit_sc_tcp.cpp  multit_sc_udp.cpp  multit_shc.cpp  multit_zc.cpp
src/kairos/: sc_zed.cpp
test/: test_object_creator.cpp  test_vector.cpp
(+14193 files in other folders)
